static build